force-app/main/default/objects/Contact/fields/FreePetFoodStatus__c.field-meta.xml
<CustomField>
    <fullName>FreePetFoodStatus__c</fullName>
    <formula>IF( SumOfPoints__c = 0,IMAGE(&quot;https://e7.pngegg.com/pngimages/54/985/png-clipart-green-and-white-correct-sign-grass-angle-symbol-yellow-accept-angle-grass-thumbnail.png&quot;,&quot;tekst&quot; , 30,30),IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Antu_task-reject.svg/512px-Antu_task-reject.svg.png?20160706132530&quot;,&quot;tekst&quot; , 30,30) )</formula>
    <label>Free Pet Food Status</label>
    <type>Text</type>
</CustomField>