force-app/main/default/objects/Contact/fields/idCardNumber__c.field-meta.xml
<CustomField>
    <fullName>idCardNumber__c</fullName>
    <label>idCardNumber</label>
    <type>TextArea</type>
</CustomField>