force-app/main/default/objects/Contact/fields/SumOfPoints__c.field-meta.xml
<CustomField>
    <fullName>SumOfPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SumOfPoints</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>