force-app/main/default/objects/Contact/validationRules/Points_Must_Be_Greater_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Must_Be_Greater_Than_0</fullName>
    <active>true</active>
    <errorConditionFormula>SumOfPoints__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount of points has to be greater than 0!</errorMessage>
</ValidationRule>